fixed sidebar z-index

--- a/_static/hasura-custom.css
+++ b/_static/hasura-custom.css
@@ -1312,6 +1312,7 @@ ol, ul
   #sidebar {
     top: 170px;
     height: calc(100% - 170px);
+    z-index: 1;
   }
 
   .header_links {
